重构命令，section交互代码